backend functions for list sharing done
