# backend/api/openapi.yaml
@@ -57,26 +57,26 @@ paths:
 
   /signup:
     get:
-      description: Get all suers
+      description: Gets all users
       responses:
         200:
           description: Successful
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UsrItem'
-        401:
-          description: Invalid Username or Email
-          
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
         default:
           description: Unexpected Error
           content:
             applcation/json:
               schema:
-                $ref: '#/components/schemas/UnexpectedError'
-
+                type: array
+                items:
+                  $ref: '#/components/schemas/UnexpectedError'
     post:
-      description: Creates a new account
+      description: Creates a new user
       requestBody:
         description: Account to add
         required: true
@@ -90,28 +90,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/NewUser'
+                $ref: '#/components/schemas/User'
         409:
           description: Email already in use
-        default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UnexpectedError'
-
-  /users_lists:
-    get:
-      # security:
-      #   - bearerAuth: []
-      description: Get all user-list connections
-      responses:
-        200:
-          description: Successful
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserToList'
         default:
           description: unexpected error
           content:
@@ -130,7 +111,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/List'
+                type: array
+                items:
+                  $ref: '#/components/schemas/List'
         default:
           description: unexpected error
           content:
@@ -159,6 +142,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/List'
+        400:
+          description: User does not exist
         default:
           description: unexpected error
           content:
@@ -185,12 +170,14 @@ paths:
               $ref: '#/components/schemas/NewList'
         # allowReserved: true
       responses:
-        204:
+        201:
           description: Successfully created list
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/List'
+        400:
+          description: User not found
         default:
           description: unexpected error
           content:
@@ -216,7 +203,60 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UsrItem'
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+        400:
+          description: List does not exist
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnexpectedError'
+
+  /users_lists:
+    get:
+      # security:
+      #   - bearerAuth: []
+      description: Get all user-list connections
+      responses:
+        200:
+          description: Successful
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/UserToList'
+        404:
+          description: Id not found
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnexpectedError'
+    post:
+      # security:
+      #   - bearerAuth: []
+      description: Create a new user-list connection
+      requestBody:
+        description: Account to add
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewUserToList'
+      responses:
+        201:
+          description: Successfully created user-list connection
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserToList'
+        400:
+          description: Invalid id
         default:
           description: unexpected error
           content:
@@ -235,7 +275,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/FoodItem'
+                $ref: '#/components/schemas/Food'
         default:
           description: unexpected error
           content:
@@ -252,14 +292,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/NewFoodItem'
+              $ref: '#/components/schemas/NewFood'
       responses:
         201:
           description: Successfully added item 
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/NewFoodItem'
+                $ref: '#/components/schemas/Food'
         409:
           description: Food already there
         default:
@@ -289,7 +329,9 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/FoodItem'
+                  $ref: '#/components/schemas/Food'
+        404:
+          description: List does not exist
         default:
           description: unexpected error
           content:
@@ -313,16 +355,16 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/NewFoodItem'
+              $ref: '#/components/schemas/NewFood'
       responses:
         201:
           description: Successfully added item 
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/NewFoodItem'
-        409:
-          description: Food already there
+                $ref: '#/components/schemas/Food'
+        400:
+          description: List does not exist
         default:
           description: unexpected error
           content:
@@ -334,29 +376,29 @@ paths:
     put:
       security:
         - bearerAuth: []
-      description: Edit a foodlist item
+      description: Edit a food
       parameters:
       - name: id
         in: path
-        description: Id of food item
+        description: Id of food
         required: true
         schema:
           type: integer
         allowReserved: true
       requestBody:
-        description: Food item to edit
+        description: Food to edit
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/NewFoodItem'
+              $ref: '#/components/schemas/NewFood'
       responses:
         200:
-          description: Successfully edited item 
+          description: Successfully edited food 
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/NewFoodItem'   
+                $ref: '#/components/schemas/Food'   
         default:
           description: unexpected error
           content:
@@ -427,7 +469,6 @@ components:
         email:
           type: string
           format: email
-          pattern: ^(([^<>()[\]\\.,;:\s@"]+(\.[^<>()[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$
         password:
           type: string
 
@@ -449,12 +490,10 @@ components:
         email:
             type: string
             format: email
-            # https://regexpattern.com/email-address/
-            pattern: ^(([^<>()[\]\\.,;:\s@"]+(\.[^<>()[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$
         password:
           type: string
 
-    UsrItem:
+    User:
       type: object
       properties:
         id:
@@ -467,20 +506,8 @@ components:
             email:
               type: string
               format: email
-              # https://regexpattern.com/email-address/
-              pattern: ^(([^<>()[\]\\.,;:\s@"]+(\.[^<>()[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$
             password:
               type: string
-    
-    UserToList:
-      type: object
-      properties:
-        id:
-          type: integer
-        usr_id:
-          type: integer
-        list_id:
-          type: integer
 
     NewList:
       type: object
@@ -495,27 +522,26 @@ components:
           type: integer
         list_name:
           type: string
-          
-    FoodItem:
+
+    NewUserToList:
+      type: object
+      properties:
+        usr_id:
+          type: integer
+        list_id:
+          type: integer
+
+    UserToList:
       type: object
       properties:
         id:
           type: integer
+        usr_id:
+          type: integer
         list_id:
           type: integer
-        item:
-          type: string
-        amount:
-          type: integer
-        purchaseDate:
-          type: string
-          format: date
-        notes:
-          type: string
-        tags:
-          type: object
-        
-    NewFoodItem:
+
+    NewFood:
       type: object
       properties:
         item:
@@ -532,3 +558,20 @@ components:
       required:
         - item
         - purchaseDate
+
+    Food:
+      type: object
+      properties:
+        id:
+          type: integer
+        item:
+          type: string
+        amount:
+          type: integer
+        purchaseDate:
+          type: string
+          format: date
+        notes:
+          type: string
+        tags:
+          type: object
