# backend/src/app.js
@@ -41,12 +41,15 @@ app.post('/v0/signup', users.postUser);
 
 // List Routes
 app.get('/v0/lists', lists.getLists);
-app.get('/v0/users_lists', lists.getUsersToLists);
 app.get('/v0/lists/:usr_id', auth.check, lists.getUsersLists);
 app.post('/v0/lists/:usr_id', lists.newList);
 
 // User from list Routes
 app.get('/v0/users/:list_id', lists.getListsUsers);
+
+// User-List routes
+app.get('/v0/users_lists', lists.getUsersToLists);
+app.post('/v0/users_lists', lists.newUserListConc);
 
 // Food Routes
 app.get('/v0/food', auth.check, food.getFood);
